tests/integration/errors/use_old_syntax.rsg
// TEST: compile_error
// EXPECT-ERROR: expected '::'

mod math {
    pub fn add(a: i32, b: i32) -> i32 = a + b
}

use math { add }

fn main() {
    add(1, 2)
}
